# xPackageManager

./: .gitignore  Cargo.toml  README.md
crates/xpm-alpm/: Cargo.toml
crates/xpm-alpm/src/: backend.rs  cache.rs  lib.rs  orphan.rs  transaction.rs
crates/xpm-core/src/: error.rs  lib.rs  operation.rs  package.rs  source.rs
crates/xpm-flatpak/src/: backend.rs  lib.rs  remote.rs
crates/xpm-notify/: Cargo.toml
crates/xpm-notify/src/: main.rs
crates/xpm-service/src/: lib.rs  manager.rs  progress.rs  state.rs
crates/xpm-ui/: Cargo.toml  build.rs
crates/xpm-ui/src/: main.rs  main.rs.pty_backup
crates/xpm-ui/ui/: main.slint  main.slint.pty_backup
packaging/: PKGBUILD  xpackagemanager.desktop  xpm-notify.desktop
