[workspace]
resolver = "2"
members = [
    "crates/xpm-core",
    "crates/xpm-alpm",
    "crates/xpm-flatpak",
    "crates/xpm-service",
    "crates/xpm-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["xPackageManager Contributors"]
repository = "https://github.com/example/xpackagemanager"

[workspace.dependencies]
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "sync", "macros"] }
async-trait = "0.1"
slint = { version = "1.9", default-features = false, features = ["backend-qt", "backend-winit", "renderer-femtovg", "compat-1-2"] }
alpm = "5.0"
libflatpak = "0.7"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
xpm-core = { path = "crates/xpm-core" }
xpm-alpm = { path = "crates/xpm-alpm" }
xpm-flatpak = { path = "crates/xpm-flatpak" }
xpm-service = { path = "crates/xpm-service" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
