[package]
name = "xpm-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Slint UI frontend for xPackageManager"
build = "build.rs"

[[bin]]
name = "xpackagemanager"
path = "src/main.rs"

[dependencies]
xpm-core.workspace = true
xpm-service.workspace = true
xpm-alpm.workspace = true
xpm-flatpak.workspace = true
slint.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
open = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
quick-xml = { version = "0.37", features = ["encoding"] }
libc = "0.2"
ksni = "0.3.4"
notify-rust = "4"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
slint-build = "=1.16.0"
